// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Layout for the "/" view 1`] = `

<gui-layout>
  <div class="flex flex-col antialiased">
    <gui-marketing-header>
    </gui-marketing-header>
    <gui-search>
    </gui-search>
    <gui-marketing-footer>
    </gui-marketing-footer>
    <gui-toaster>
    </gui-toaster>
  </div>
</gui-layout>

`;

exports[`renders Layout for the "/create-new-project" view 1`] = `

<gui-layout>
  <div class="bg-background antialiased">
    <div class="bg-background-secondary relative">
      <div class="min-h-svh grid-cols-[auto_4fr] md:grid">
        <gui-sidebar-provider
          defaultopen="true"
          classname="sticky top-0 flex w-full px-px"
        >
          <gui-app-sidebar classname="bg-background rounded">
          </gui-app-sidebar>
        </gui-sidebar-provider>
        <div class="bg-background flex w-full flex-col rounded-t">
          <div class="bg-background-secondary sticky top-0 z-10 flex w-full shrink-0 rounded-t pb-[1px]">
            <gui-header classname="bg-background rounded">
            </gui-header>
          </div>
          <div class="bg-background-secondary flex min-h-0 w-full flex-1">
            <main class="bg-background h-full w-full overflow-auto rounded">
              <gui-create-new-project>
              </gui-create-new-project>
            </main>
          </div>
        </div>
      </div>
    </div>
  </div>
  <gui-toaster>
  </gui-toaster>
</gui-layout>

`;

exports[`renders Layout for the "/error" view 1`] = `

<gui-layout>
  <div class="bg-background antialiased">
    <div class="bg-background-secondary relative">
      <div class="min-h-svh grid-cols-[auto_4fr] md:grid">
        <gui-sidebar-provider
          defaultopen="true"
          classname="sticky top-0 flex w-full px-px"
        >
          <gui-app-sidebar classname="bg-background rounded">
          </gui-app-sidebar>
        </gui-sidebar-provider>
        <div class="bg-background flex w-full flex-col rounded-t">
          <div class="bg-background-secondary sticky top-0 z-10 flex w-full shrink-0 rounded-t pb-[1px]">
            <gui-header classname="bg-background rounded">
            </gui-header>
          </div>
          <div class="bg-background-secondary flex min-h-0 w-full flex-1">
            <main class="bg-background h-full w-full overflow-auto rounded">
              <gui-error-found>
              </gui-error-found>
            </main>
          </div>
        </div>
      </div>
    </div>
  </div>
  <gui-toaster>
  </gui-toaster>
</gui-layout>

`;

exports[`renders Layout for the "/explore" view 1`] = `

<gui-layout>
  <div class="bg-background antialiased">
    <div class="bg-background-secondary relative">
      <div class="min-h-svh grid-cols-[auto_4fr] md:grid">
        <gui-sidebar-provider
          defaultopen="true"
          classname="sticky top-0 flex w-full px-px"
        >
          <gui-app-sidebar classname="bg-background rounded">
          </gui-app-sidebar>
        </gui-sidebar-provider>
        <div class="bg-background flex w-full flex-col rounded-t">
          <div class="bg-background-secondary sticky top-0 z-10 flex w-full shrink-0 rounded-t pb-[1px]">
            <gui-header classname="bg-background rounded">
            </gui-header>
          </div>
          <div class="bg-background-secondary flex min-h-0 w-full flex-1">
            <main class="bg-background h-full w-full overflow-auto rounded">
              <gui-explorer>
              </gui-explorer>
            </main>
          </div>
        </div>
      </div>
    </div>
  </div>
  <gui-toaster>
  </gui-toaster>
</gui-layout>

`;

exports[`renders Layout for the "/help/selectors" view 1`] = `

<gui-layout>
  <div class="bg-background antialiased">
    <div class="bg-background-secondary relative">
      <div class="min-h-svh grid-cols-[auto_4fr] md:grid">
        <gui-sidebar-provider
          defaultopen="true"
          classname="sticky top-0 flex w-full px-px"
        >
          <gui-app-sidebar classname="bg-background rounded">
          </gui-app-sidebar>
        </gui-sidebar-provider>
        <div class="bg-background flex w-full flex-col rounded-t">
          <div class="bg-background-secondary sticky top-0 z-10 flex w-full shrink-0 rounded-t pb-[1px]">
            <gui-header classname="bg-background rounded">
            </gui-header>
          </div>
          <div class="bg-background-secondary flex min-h-0 w-full flex-1">
            <main class="bg-background h-full w-full overflow-auto rounded">
              <gui-help-selectors>
              </gui-help-selectors>
            </main>
          </div>
        </div>
      </div>
    </div>
  </div>
  <gui-toaster>
  </gui-toaster>
</gui-layout>

`;

exports[`renders Layout for the "/labels" view 1`] = `

<gui-layout>
  <div class="bg-background antialiased">
    <div class="bg-background-secondary relative">
      <div class="min-h-svh grid-cols-[auto_4fr] md:grid">
        <gui-sidebar-provider
          defaultopen="true"
          classname="sticky top-0 flex w-full px-px"
        >
          <gui-app-sidebar classname="bg-background rounded">
          </gui-app-sidebar>
        </gui-sidebar-provider>
        <div class="bg-background flex w-full flex-col rounded-t">
          <div class="bg-background-secondary sticky top-0 z-10 flex w-full shrink-0 rounded-t pb-[1px]">
            <gui-header classname="bg-background rounded">
            </gui-header>
          </div>
          <div class="bg-background-secondary flex min-h-0 w-full flex-1">
            <main class="bg-background h-full w-full overflow-auto rounded">
              <gui-labels>
              </gui-labels>
            </main>
          </div>
        </div>
      </div>
    </div>
  </div>
  <gui-toaster>
  </gui-toaster>
</gui-layout>

`;

exports[`renders Layout for the "/queries" view 1`] = `

<gui-layout>
  <div class="bg-background antialiased">
    <div class="bg-background-secondary relative">
      <div class="min-h-svh grid-cols-[auto_4fr] md:grid">
        <gui-sidebar-provider
          defaultopen="true"
          classname="sticky top-0 flex w-full px-px"
        >
          <gui-app-sidebar classname="bg-background rounded">
          </gui-app-sidebar>
        </gui-sidebar-provider>
        <div class="bg-background flex w-full flex-col rounded-t">
          <div class="bg-background-secondary sticky top-0 z-10 flex w-full shrink-0 rounded-t pb-[1px]">
            <gui-header classname="bg-background rounded">
            </gui-header>
          </div>
          <div class="bg-background-secondary flex min-h-0 w-full flex-1">
            <main class="bg-background h-full w-full overflow-auto rounded">
              <gui-queries>
              </gui-queries>
            </main>
          </div>
        </div>
      </div>
    </div>
  </div>
  <gui-toaster>
  </gui-toaster>
</gui-layout>

`;

exports[`renders Layout for the "/settings/general" view 1`] = `

<gui-layout>
  <div class="bg-background antialiased">
    <div class="bg-background-secondary relative">
      <div class="min-h-svh grid-cols-[auto_4fr] md:grid">
        <gui-sidebar-provider
          defaultopen="true"
          classname="sticky top-0 flex w-full px-px"
        >
          <gui-app-sidebar classname="bg-background rounded">
          </gui-app-sidebar>
        </gui-sidebar-provider>
        <div class="bg-background flex w-full flex-col rounded-t">
          <div class="bg-background-secondary sticky top-0 z-10 flex w-full shrink-0 rounded-t pb-[1px]">
            <gui-header classname="bg-background rounded">
            </gui-header>
          </div>
          <div class="bg-background-secondary flex min-h-0 w-full flex-1">
            <main class="bg-background h-full w-full overflow-auto rounded">
              <gui-settings-view>
              </gui-settings-view>
            </main>
          </div>
        </div>
      </div>
    </div>
  </div>
  <gui-toaster>
  </gui-toaster>
</gui-layout>

`;

exports[`renders SignIn for the "/auth/sign-in" view 1`] = `

<gui-layout>
  <div class="bg-background antialiased">
    <div class="bg-background-secondary relative">
      <div class="min-h-svh grid-cols-[auto_4fr] md:grid">
        <gui-sidebar-provider
          defaultopen="true"
          classname="sticky top-0 flex w-full px-px"
        >
          <gui-app-sidebar classname="bg-background rounded">
          </gui-app-sidebar>
        </gui-sidebar-provider>
        <div class="bg-background flex w-full flex-col rounded-t">
          <div class="bg-background-secondary sticky top-0 z-10 flex w-full shrink-0 rounded-t pb-[1px]">
            <gui-header classname="bg-background rounded">
            </gui-header>
          </div>
          <div class="bg-background-secondary flex min-h-0 w-full flex-1">
            <main class="bg-background h-full w-full overflow-auto rounded">
              <gui-sign-in>
              </gui-sign-in>
            </main>
          </div>
        </div>
      </div>
    </div>
  </div>
  <gui-toaster>
  </gui-toaster>
</gui-layout>

`;

exports[`renders SignUp for the "/auth/sign-up" view 1`] = `

<gui-layout>
  <div class="bg-background antialiased">
    <div class="bg-background-secondary relative">
      <div class="min-h-svh grid-cols-[auto_4fr] md:grid">
        <gui-sidebar-provider
          defaultopen="true"
          classname="sticky top-0 flex w-full px-px"
        >
          <gui-app-sidebar classname="bg-background rounded">
          </gui-app-sidebar>
        </gui-sidebar-provider>
        <div class="bg-background flex w-full flex-col rounded-t">
          <div class="bg-background-secondary sticky top-0 z-10 flex w-full shrink-0 rounded-t pb-[1px]">
            <gui-header classname="bg-background rounded">
            </gui-header>
          </div>
          <div class="bg-background-secondary flex min-h-0 w-full flex-1">
            <main class="bg-background h-full w-full overflow-auto rounded">
              <gui-sign-up>
              </gui-sign-up>
            </main>
          </div>
        </div>
      </div>
    </div>
  </div>
  <gui-toaster>
  </gui-toaster>
</gui-layout>

`;

exports[`renders search for the "/search" view 1`] = `

<gui-layout>
  <div class="flex flex-col antialiased">
    <gui-marketing-header>
    </gui-marketing-header>
    <gui-search-results>
    </gui-search-results>
    <gui-marketing-footer>
    </gui-marketing-footer>
    <gui-toaster>
    </gui-toaster>
  </div>
</gui-layout>

`;
